[metadata]
name = measurer
version = 1.0.0
author = sharrik111
author_email = sharrik111@gmail.com
description = Easily measure Python function performance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sharrik111/measurer
license = Unlicense
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent

[options]
py_modules = measure
packages = find:
python_requires = >=3.6
